# Rust-Simply.github.io

./: Cargo.toml  Dioxus.toml  build.bat  serve.bat
docs/: CNAME  index.html  site.css
docs/assets/dioxus/: rust-simply-website.js  rust-simply-website_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-85a0a2f8acce2e86/: inline0.js
public/: CNAME  site.css
src/: lib.rs
website/: Cargo.toml
