[package]
name = "rust-simply-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-web = { version = "0.4.3", features = ["hydrate"], optional = true }
dioxus-fullstack = { version = "0.4.3", features = ["router"] }
dioxus-router = "0.4.3"
indoc = "2.0.4"
tokio = { version = "1", features = ["macros"], optional = true }
serde = "1.0.195"

[features]
default = []
ssr = ["tokio", "dioxus-fullstack/ssr"]
web = ["dioxus-web"]
csr = ["dioxus-web"]